Fixed camera control on Firefox, added slider to control zoom level, and other improvements

--- a/frontend/server/public/themes/olympus/theme.css
+++ b/frontend/server/public/themes/olympus/theme.css
@@ -28,6 +28,7 @@
     --accent-light-red: #F5B6B6;
 
     --background-grey: #3d4651;
+    --background-dark-grey: #35393d;
     --background-slate-blue: #363c43;
     --background-offwhite: #f2f2f3;
     --background-steel: #202831;
